@@ -1,5 +1,6 @@
 package semicolon.africa.waylchub.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -15,6 +16,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -30,6 +32,9 @@ import java.util.List;
 @EnableMethodSecurity
 public class SecurityConfig {
 
+    @Value("${cors.permitted-origins:http://localhost:5173}")
+    private String allowedOrigins;
+
     @Bean
     public JwtAuthenticationFilter jwtAuthFilter(JwtService jwtService, UserRepository userRepository) {
         return new JwtAuthenticationFilter(jwtService, userRepository);
@@ -40,41 +45,64 @@ public class SecurityConfig {
             HttpSecurity http,
             JwtAuthenticationFilter jwtAuthFilter,
             AuthenticationProvider authenticationProvider,
-            CorsConfigurationSource corsConfigurationSource // 1. Inject the Bean
+            CorsConfigurationSource corsConfigurationSource
     ) throws Exception {
         return http
-                .cors(c -> c.configurationSource(corsConfigurationSource)) // 2. Use the Bean
+                .cors(c -> c.configurationSource(corsConfigurationSource))
                 .csrf(AbstractHttpConfigurer::disable)
+
+                // ── Security response headers ──────────────────────────────────────────
+                .headers(headers -> headers
+                        .frameOptions(frame -> frame.deny())
+                        .httpStrictTransportSecurity(hsts -> hsts
+                                .includeSubDomains(true)
+                                .maxAgeInSeconds(31536000))
+                        .contentTypeOptions(c -> {})
+                        .referrerPolicy(r -> r
+                                .policy(ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN))
+                )
+
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(
-                                "/api/v1/auth/**",
-                                "/api/categories/**",
-                                "/api/products/**",
-                                "/api/v1/cart/**",
-                                "/api/v1/payments/webhook/**",
-                                "/api/v1/orders/verify/**",
-                                "/api/v1/payments/retry/**"
-                        ).permitAll()
-                        .requestMatchers("/api/v1/users/**").authenticated()
+
+                        // ── Fully public ────────────────────────────────────────────────
+                        .requestMatchers("/api/v1/auth/**").permitAll()
+
+                        // ── Public browsing ─────────────────────────────────────────────
+                        // Public browsing — no token needed
+                        .requestMatchers("/api/categories/**", "/api/products/**").permitAll()
+
+                        // ── Cart — guests send X-Guest-ID instead of JWT ────────────────
+                        .requestMatchers("/api/v1/cart/**").permitAll()
+
+                        // ── Monnify webhook — no JWT, must be open ──────────────────────
+                        .requestMatchers("/api/v1/payments/webhook/**").permitAll()
+
+                        // ── Payment callback polling ────────────────────────────────────
+                        .requestMatchers("/api/v1/orders/verify/**").permitAll()
+
+                        // ── Admin routes — JWT + ROLE_ADMIN required ────────────────────
+                        .requestMatchers("/api/v1/admin/**").hasRole("ADMIN")
+
+                        // ── Everything else needs a valid JWT ───────────────────────────
                         .anyRequest().authenticated()
                 )
+
                 .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authenticationProvider(authenticationProvider)
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
 
-    // ✅ 3. Define the Robust CORS Configuration
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // Your Frontend URL
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
-        // ⚠️ CRITICAL: You must explicitly allow X-Guest-ID header
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Guest-ID"));
-
+        configuration.setAllowedOrigins(List.of(allowedOrigins.split(",")));
+        configuration.setAllowedMethods(
+                Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(
+                Arrays.asList("Authorization", "Content-Type", "X-Guest-ID","ngrok-skip-browser-warning"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
